muted some section of the code

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <!-- Site Metas -->
-    <title>Arcade</title>
+    <title>Arcade Enter </title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -173,7 +173,7 @@
 	<!-- section -->
     <div class="section layout_padding">
         <div class="container">
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-md-12">
                     <div class="full">
                         <div class="heading_main text_align_left">
@@ -275,10 +275,10 @@
 			   </div>
 			   
 			   
-			</div>
+			</div>-->
         </div>
     </div>
-	<!-- end section -->
+	<!-- end section 
 	
 	<!-- Home Room Section Begin -->
     <section class="hp-room-section">
