--- a/static/website/css/style.css
+++ b/static/website/css/style.css
@@ -1170,24 +1170,24 @@ figure.effect-service:hover {
 	padding: 14px 34px 13px;
 	display: inline-block;
 }
-.room-booking {
+.series_movies {
 	padding: 0 30px 0 40px;
 }
-.room-booking h3 {
+.series_movies h3 {
 	color: #19191a;
 	margin-bottom: 30px;
 }
-.room-booking form .check-date {
+.series_movies form .check-date {
 	position: relative;
 	margin-bottom: 15px;
 }
-.room-booking form .check-date label {
+.series_movies form .check-date label {
 	font-size: 14px;
 	color: #707079;
 	display: block;
 	margin-bottom: 10px;
 }
-.room-booking form .check-date input {
+.series_movies form .check-date input {
 	width: 100%;
 	height: 50px;
 	border: 1px solid #ebebeb;
@@ -1198,22 +1198,22 @@ figure.effect-service:hover {
 	font-weight: 500;
 	padding-left: 20px;
 }
-.room-booking form .check-date i {
+.series_movies form .check-date i {
 	color: #dfa974;
 	position: absolute;
 	right: 18px;
 	bottom: 17px;
 }
-.room-booking form .select-option {
+.series_movies form .select-option {
 	margin-bottom: 15px;
 }
-.room-booking form .select-option label {
+.series_movies form .select-option label {
 	font-size: 14px;
 	color: #707079;
 	display: block;
 	margin-bottom: 10px;
 }
-.room-booking form .select-option .nice-select {
+.series_movies form .select-option .nice-select {
 	border-radius: 2px;
 	border: 1px solid #ebebeb;
 	height: 50px;
@@ -1223,7 +1223,7 @@ figure.effect-service:hover {
 	width: 100%;
 	float: none;
 }
-.room-booking form .select-option .nice-select:after {
+.series_movies form .select-option .nice-select:after {
 	border-bottom: 2px solid #dfa974;
 	border-right: 2px solid #dfa974;
 	height: 10px;
@@ -1232,17 +1232,17 @@ figure.effect-service:hover {
 	width: 10px;
 	top: 36%;
 }
-.room-booking form .select-option .nice-select span {
+.series_movies form .select-option .nice-select span {
 	font-size: 16px;
 	color: #19191a;
 	text-transform: uppercase;
 	font-weight: 500;
 }
-.room-booking form .select-option .nice-select .list {
+.series_movies form .select-option .nice-select .list {
 	margin-top: 0;
 	width: 100%;
 }
-.room-booking form button {
+.series_movies form button {
 	display: block;
 	font-size: 14px;
 	text-transform: uppercase;
@@ -1256,8 +1256,25 @@ figure.effect-service:hover {
 	margin-top: 30px;
 }
 /*------------------------
-  Home Page Room Section 
+  Home Page movies Section 
 -------------------------*/
+.section-title {
+	text-align: center;
+	margin-bottom: 22px;
+}
+.section-title span {
+	font-size: 14px;
+	color: #dfa974;
+	font-weight: 700;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+}
+.section-title h2 {
+	font-size: 44px;
+	color: #19191a;
+	line-height: 58px;
+	margin-top: 10px;
+}
 
 .hp-room-items {
 	margin-left: -15px;
@@ -1332,6 +1349,95 @@ figure.effect-service:hover {
 		max-width: 1170px;
 	}
 }
+
+.booking-form {
+	background: #ffffff;
+	padding: 44px 40px 50px 40px;
+	border-radius: 4px;
+}
+.booking-form h3 {
+	color: #19191a;
+	margin-bottom: 36px;
+}
+.booking-form form .check-date {
+	position: relative;
+	margin-bottom: 15px;
+}
+.booking-form form .check-date label {
+	font-size: 14px;
+	color: #707079;
+	display: block;
+	margin-bottom: 10px;
+}
+.booking-form form .check-date input {
+	width: 100%;
+	height: 50px;
+	border: 1px solid #ebebeb;
+	border-radius: 2px;
+	font-size: 16px;
+	color: #19191a;
+	text-transform: uppercase;
+	font-weight: 500;
+	padding-left: 20px;
+}
+.booking-form form .check-date i {
+	color: #dfa974;
+	position: absolute;
+	right: 18px;
+	bottom: 17px;
+}
+.booking-form form .select-option {
+	margin-bottom: 15px;
+}
+.booking-form form .select-option label {
+	font-size: 14px;
+	color: #707079;
+	display: block;
+	margin-bottom: 10px;
+}
+.booking-form form .select-option .nice-select {
+	border-radius: 2px;
+	border: 1px solid #ebebeb;
+	height: 50px;
+	line-height: 50px;
+	outline: none;
+	padding-left: 20px;
+	width: 100%;
+	float: none;
+}
+.booking-form form .select-option .nice-select:after {
+	border-bottom: 2px solid #dfa974;
+	border-right: 2px solid #dfa974;
+	height: 10px;
+	margin-top: 0;
+	right: 20px;
+	width: 10px;
+	top: 36%;
+}
+.booking-form form .select-option .nice-select span {
+	font-size: 16px;
+	color: #19191a;
+	text-transform: uppercase;
+	font-weight: 500;
+}
+.booking-form form .select-option .nice-select .list {
+	margin-top: 0;
+	width: 100%;
+}
+.booking-form form button {
+	display: block;
+	font-size: 14px;
+	text-transform: uppercase;
+	border: 1px solid #dfa974;
+	border-radius: 2px;
+	color: #dfa974;
+	font-weight: 500;
+	background: transparent;
+	width: 100%;
+	height: 46px;
+	margin-top: 30px;
+}
+
 /* Medium Device: 1200px */
 
 /*------------------------------------------------------------------ Gallery -------------------------------------------------------------------*/
