--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -55,7 +55,8 @@
     <header class="top-header">
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img src=""  alt=""><h2 style="font-weight: bold; font-size: 20px;">EA</h2></a>
+                <a class="nav-link active" href="index.html"><img src="{% static 'website/img/logo2.2.png' %}" width="75" height="50" alt=""></a>
+                
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-wd" aria-controls="navbar-wd" aria-expanded="false" aria-label="Toggle navigation">
                     <span></span>
                     <span></span>
@@ -96,7 +97,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 margin-bottom_30">
-                   <img src="{% static 'website/img/logo2.png' %}" width="120px" height="80px" alt="#" />
+                   <img src="{% static 'website/img/logo2.png' %}" width="75" height="75" alt="#" />
                 </div>
                <div class="col-xl-6 white_fonts">
                     <div class="row">
