--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -120,8 +120,8 @@
 						   </div>
 						   <div class="right">
 						    <p class="small_tag">About us</p>
-                            <h2><span class="theme_color">Arcade </span> We Fix Your IT Problem</h2>
-                            <p class="large">Get Best Entertainment today</p>
+                            <h2><span class="theme_color">Arcade </span></h2>
+                            <p class="large">We design and develop custom mobile solutions (apps) and websites </p>
 						  </div>	
                         </div>
                     </div>
@@ -142,8 +142,36 @@
                 </div>
 
                 <div class="col-lg-6 col-md-12 white_fonts layout_padding padding_left_right">
-                    <h3 class="small_heading">EVERYTHING<br>YOU NEED IN ONE SOLUTION</h3>
-                    <p>...</p>
+                    <h3 class="small_heading">Who are<br>We?</h3>
+                    <p>Arcade is your Information Technology and Entertainment Hub! Our team converts ideas to apps. We will help you design Android, iOS, SMS or USSD apps as well as web portals and a website to help you launch your app. We also handle integrations, that is, MPESA, CRB, Maps, Paypal! We are your go to people for all your website design in Nairobi, in Kenya and really, in the world. </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end section -->
+    <!-- section -->
+    <div class="section layout_padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="full">
+                        <div class="heading_main text_align_left">
+                           <div class="left">
+                             <p class="section_count"></p>
+                           </div>
+                           <div class="right">
+                            <p class="small_tag">More About us</p>
+                            <h2><span class="theme_color">IN A NUTSHELL</span> <br>Who Are We?</h2>
+                            <p class="large">We are a group of young and multi-skilled individuals that make the best websites and mobile app development company in Nairobi Kenya. We think custom and uniqueness before amending your idea. </p>
+                          </div> 
+
+                        </div>
+                        <div class="col-lg-12">
+                    <div class="full center">
+                        <a href="about.html" class="hvr-radial-out button-theme">See More ></a>
+                    </div>
+                </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -153,7 +181,7 @@
 	<!-- section -->
     <div class="section layout_padding">
         <div class="container">
-            <!--<div class="row">
+            <div class="row">
                 <div class="col-md-12">
                     <div class="full">
                         <div class="heading_main text_align_left">
@@ -162,7 +190,7 @@
 						   </div>
 						   <div class="right">
 						    <p class="small_tag">SERVICES</p>
-                            <h2><span class="theme_color">Arcade</span> our aim</h2>
+                            <h2><span class="theme_color">Arcade</span> What we are Good In</h2>
                           </div>	
                         </div>
                     </div>
@@ -176,10 +204,10 @@
 					   <img width="75" height="75" src="{% static 'website/img/icon-1.png' %}" alt="#">
 					</div>
 					<div class="full">
-					   <h4>Arcade Gaming</h4>
+					   <h4>Software Development</h4>
 					</div>
 					<div class="full">
-					  <p>.........................</p>
+					  <p>Solution driven developers. Timely delivery and well-documented software. Custom software development from user requirement document. We also design Software prototypes.</p>
 					</div>
 				 </div>
 			   </div>
@@ -187,13 +215,13 @@
 			   <div class="col-sm-6 col-md-4">
 			     <div class="service_blog">
 				    <div class="service_icons">
-					   <img width="75" height="75" src="img/icon-2.png" alt="#">
+					   <img width="75" height="75" src="{% static 'website/img/icon-2.png' %}" alt="#">
 					</div>
 					<div class="full">
-					   <h4>Arcade Gaming</h4>
+					   <h4>Mobile Application Development</h4>
 					</div>
 					<div class="full">
-					  <p>.........................</p>
+					  <p>Android, IOS, and Cross-Platform mobile application development. Hire our team today for effective & efficient delivery.</p>
 					</div>
 				 </div>
 			   </div>
@@ -204,43 +232,43 @@
 					   <img width="75" height="75" src="{% static 'website/img/icon-3.png' %}" alt="#">
 					</div>
 					<div class="full">
-					   <h4>Arcade Gaming</h4>
+					   <h4>Web Design & Web Application</h4>
 					</div>
 					<div class="full">
-					  <p>.........................</p>
+					  <p>Online presence is important for any business. Get your website or web application designed & implemented by professionals.</p>
 					</div>
 				 </div>
 			   </div>
 			   
-			   <div class="col-sm-6 col-md-4">
+			  <div class="col-sm-6 col-md-4">
 			     <div class="service_blog">
 				    <div class="service_icons">
-					   <img width="75" height="75" src="{% static 'website/img/icon-4.png' %}" alt="#">
+					   <img width="75" height="75" src="{% static 'website/img/icon-6.png' %}" alt="#">
 					</div>
 					<div class="full">
-					   <h4>Arcade Gaming</h4>
+					   <h4>Computer Networks</h4>
 					</div>
 					<div class="full">
-					  <p>.........................</p>
+					  <p>Structured cabling, computer network design, Server maintenance, PABX & Internal communication setup.</p>
 					</div>
 				 </div>
 			   </div>
 			   
-			   <div class="col-sm-6 col-md-4">
+			    <div class="col-sm-6 col-md-4">
 			     <div class="service_blog">
 				    <div class="service_icons">
-					   <img width="75" height="75" src="{% static 'website/img/icon-5.png' %}" alt="#">
+					   <img width="75" height="75" src="{% static 'website/img/icon-9.png' %}" alt="#">
 					</div>
 					<div class="full">
 					   <h4>Arcade Gaming</h4>
 					</div>
 					<div class="full">
-					  <p></p>
+					  <p>We are The best in Gaming in the city</p>
 					</div>
 				 </div>
 			   </div>
 			   
-			   <div class="col-sm-6 col-md-4">
+			  <!-- <div class="col-sm-6 col-md-4">
 			     <div class="service_blog">
 				    <div class="service_icons">
 					   <img width="75" height="75" src="{% static 'website/img/icon-6.png'" alt="#">
